# djamplek8s-project

./: .bumpversion.cfg  .gitignore  .kube-linter.yaml  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  sample.env
djamplek8s/: __init__.py  manage.py
djamplek8s/config/: settings.py  wsgi.py
